--- a/src/components/homepage/homepage.module.css
+++ b/src/components/homepage/homepage.module.css
@@ -1,21 +1,34 @@
 .game-mode-card {
-    display: flex;
-    flex-direction: row wrap;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
+  display: flex;
+  flex-direction: row wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .banner {
-    display: flex;
+  display: flex;
 }
 
 .select-mode {
-    margin: 40px;
-    font-size: 24px;
-    font-family: "Madimi One", sans-serif;
-    font-weight: 400;
-    font-size: 40px;
+  margin: 40px;
+  font-size: 24px;
+  font-family: "Madimi One", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+}
 
+.navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  max-width: 1280px;
+  background-color: white;
+  z-index: 1000;
+  padding-right: 40px;
 }
