--- a/src/components/GameCard/GameCard.module.css
+++ b/src/components/GameCard/GameCard.module.css
@@ -1,15 +1,16 @@
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
+  position: relative;
   background-color: transparent;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f1f1f1;
+  width: 80px;
+  height: 110px;
   perspective: 1000px;
   /* Remove this if you don't want the 3D effect */
 }
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
+  box-shadow: 0px 4px 8px 0px rgba(10, 5, 5, 0.2);
   position: relative;
   width: 100%;
   height: 100%;
@@ -19,9 +20,9 @@
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
+ .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
-}
+ }
 
 /* Position the front and back side */
 .flip-card-front,
@@ -45,4 +46,14 @@
   background-color: rgb(241, 192, 32);
   color: white;
   transform: rotateY(180deg);
+}
+
+.card-front .card-back img {
+  z-index: 1;
+  max-width: 70px;
+  padding: 15px 10px;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+
 }
