--- a/src/components/GameScreen/GameScreen.module.css
+++ b/src/components/GameScreen/GameScreen.module.css
@@ -12,16 +12,15 @@
     margin: auto;
 }
 
-.game-cell {
-    border: 1px solid black;
+.game-cell { 
     min-width: 30px;
     min-height: 40px;
 }
 
 .back-btn {
-    position: absolute;
+    position: fixed;
     bottom: 5%;
     left: 5%;
-    box-shadow: 2px 2px 8px 1px;
+    box-shadow: 1px 1px 10px 0;
     border-radius: 10px;
 }
