--- a/src/components/homepage/homepage.module.css
+++ b/src/components/homepage/homepage.module.css
@@ -9,6 +9,7 @@
 
 .banner {
   display: flex;
+  justify-content: center;
 }
 
 .select-mode {
@@ -25,10 +26,9 @@
   align-items: center;
   justify-content: space-between;
   position: fixed;
-  top: 0;
+  top: 1%;
   width: 100%;
   max-width: 1280px;
-  background-color: white;
   z-index: 1000;
   padding-right: 40px;
 }
