--- a/src/components/GameCard/GameCard.module.css
+++ b/src/components/GameCard/GameCard.module.css
@@ -20,7 +20,7 @@
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
- .flip-card:hover .flip-card-inner {
+   .flip{
   transform: rotateY(180deg);
  }
 
