--- a/src/components/GameScreen/GameScreen.module.css
+++ b/src/components/GameScreen/GameScreen.module.css
@@ -12,7 +12,7 @@
     margin: auto;
 }
 
-.game-cell { 
+.game-cell {
     min-width: 30px;
     min-height: 40px;
 }
@@ -25,6 +25,6 @@
     border-radius: 10px;
 }
 
-.hide{
-    display:none;
+.hidden {
+    visibility: hidden;
 }
