--- a/src/components/GameScreen/GameScreen.module.css
+++ b/src/components/GameScreen/GameScreen.module.css
@@ -1,3 +1,7 @@
+ 
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Honk&family=Inter:wght@100..900&family=Kode+Mono:wght@400..700&family=Madimi+One&family=Monofett&display=swap');
+ 
+
 .game-screen {
     width: 100%;
     height: 100%;
@@ -27,4 +31,15 @@
 
 .hidden {
     visibility: hidden;
+}
+
+.total-point {
+    font-family: "Kode Mono", monospace;
+    font-weight: 700;
+    font-size: 24px;
+    color: green;  
+    /* background-color: rgb(28, 25, 25); */
+    display: inline-block;
+    padding: 10px;
+     
 }
