--- a/src/components/GameCard/GameCard.module.css
+++ b/src/components/GameCard/GameCard.module.css
@@ -5,7 +5,7 @@
   width: 80px;
   height: 110px;
   perspective: 1000px;
-   
+  border-radius: 8px;
   /* Remove this if you don't want the 3D effect */
 }
 
@@ -15,15 +15,16 @@
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 8px;
   text-align: center;
-  transition: transform  1s;
+  transition: transform 1s;
   transform-style: preserve-3d;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip{
+.flip {
   transform: rotateY(180deg);
- }
+}
 
 /* Position the front and back side */
 .flip-card-front,
@@ -34,17 +35,19 @@
   -webkit-backface-visibility: hidden;
   /* Safari */
   backface-visibility: hidden;
+  border-radius: 8px;
 }
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: rgb(241, 192, 32);
+  background: linear-gradient(135deg, #b09d57 0%, #d6c07b 50%, #b09d57 100%);
   color: black;
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: rgb(241, 192, 32);
+  background: linear-gradient(135deg, #b09d57 0%, #d6c07b 50%, #b09d57 100%);
+  /* background: linear-gradient(135deg, #d9d9d9 0%, #f2f2f2 50%, #d9d9d9 100%); */
   color: white;
   transform: rotateY(180deg);
 }
