--- a/src/components/GameScreen/GameScreen.module.css
+++ b/src/components/GameScreen/GameScreen.module.css
@@ -1,60 +1,69 @@
 .game-screen {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
 }
 
 .game-board {
-    width: 100%;
-    gap: 8px;
-    max-width: fit-content;
-    margin: auto;
+  width: 100%;
+  gap: 8px;
+  max-width: fit-content;
+  margin: auto;
 }
 
 .game-cell {
-    min-width: 30px;
-    min-height: 40px;
+  min-width: 30px;
+  min-height: 40px;
 }
 
 .back-btn {
-    position: fixed;
-    bottom: 5%;
-    left: 5%;
-    box-shadow: 1px 1px 10px 0;
-    border-radius: 10px;
+  position: fixed;
+  bottom: 5%;
+  left: 5%;
+  box-shadow: 1px 1px 10px 0;
+  border-radius: 10px;
 }
 
 .hidden {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .popup {
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 20px;
-    padding: 20px;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 20px;
+  padding: 20px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .popup-btn button {
-    border: 1px solid black;
-    margin: 4px;
+  border: 1px solid black;
+  margin: 4px;
 }
 
 .total-points-board {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 20px;
 }
 
 .total-points {
-    font-size: 32px;
-    font-family: monospace;
+  font-size: 32px;
+  font-family: monospace;
+}
+.time-counter-container {
+  position: absolute;
+  bottom: 10px; /* Adjust the distance from the bottom as needed */
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  left: 50%; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Centering trick */
 }
